# Cargo.toml
# Copyright 2016 Alexander Altman
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "invariant"
version = "0.0.1"
authors = ["Alexander Ronald Altman <alexanderaltman@me.com>"]
description = "A library for creating wrapper types that enforce invariants."
repository = "https://github.com/pthariensflame/invariant.rs"
readme = "README.md"
license = "Apache-2.0"
keywords = ["wrapper", "wrapper-type", "invariant"]

[dependencies]

[features]
