# Cargo.toml
# Copyright 2016 Alexander Altman
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "invariant"
version = "0.0.3"
authors = ["Alexander Ronald Altman <alexanderaltman@me.com>"]
description = "A library for creating wrapper types that enforce invariants."
repository = "https://github.com/pthariensflame/invariant.rs"
readme = "README.md"
license = "Apache-2.0"
keywords = ["wrapper", "wrapper-type", "newtype", "invariant"]

[lib]
name = "invariant"
path = "src/lib.rs"

[dependencies]
aho-corasick = {version = "~0.5.2", optional = true}
backtrace = {version = "~0.2.3", optional = true}
bindgen = {version = "~0.19.0", optional = true}
colored = {version = "~1.3.0", optional = true}
combine = {version = "~1.3.0", optional = true}
combine-language = {version = "~1.0.0", optional = true}
log = {version = "~0.3.6", optional = true}
nom = {version = "~1.2.4", optional = true}
regex = {version = "~0.1.73", optional = true}
rustc-serialize = {version = "~0.3.19", optional = true}
syntex_errors = {version = "~0.42.0", optional = true}
syntex_pos = {version = "~0.42.0", optional = true}
syntex_syntax = {version = "~0.42.0", optional = true}
term = {version = "~0.4.4", optional = true}
unicode-xid = {version = "~0.0.3", optional = true}

[features]
default = []
all-dependencies = [
    "aho-corasick",
    "backtrace",
    "bindgen",
    "colored",
    "combine",
    "combine-language",
    "log",
    "nom",
    "regex",
    "rustc-serialize",
    "syntex_errors",
    "syntex_pos",
    "syntex_syntax",
    "term",
    "unicode-xid"
]
